--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
   <body>
         <h1> <em> always </em> <br>
          thud thud thud slap.</h1>  
-        <video id="video-1" autoplay loop controls>
+        <video id="video-1" autoplay muted loop controls>
         <source src="step one.mp4" type="video/mp4"/>
         </video>
         <h1> <em> at the end </em> <br>
             thud thud thud clap.</h1> 
-        <video id="video-2" autoplay loop controls>
+        <video id="video-2" autoplay muted loop controls>
             <source src="step two.mp4" type="video/mp4"/>
         </video>
         <h1> <em> always </em> <br>
             tell a story. <br>
             one word at a time. <br>
             each word must begin with the next letter of the alphabet.</h1> 
-        <video id="video-3" autoplay loop controls>
+        <video id="video-3" autoplay muted loop controls>
             <source src="step three.mp4" type="video/mp4"/>
         </video>
         <h1> <em> together </em> <br>
@@ -28,11 +28,11 @@
             4. say each word on the slap. <br>
             5. continue until error or end of alphabet. <br>
             6. don't forget to thud thud thud clap at finish. </h1>
-        <video id="video-4" autoplay loop controls>
+        <video id="video-4" autoplay muted loop controls>
             <source src="step four.mp4" type="video/mp4"/>
         </video>
         <h1>a b c d e f g h i j k l m n o p q r s t u v w x y z</h1> 
-        <video id="video-5" autoplay loop controls >
+        <video id="video-5" autoplay muted loop controls >
             <source src="step five.mp4" type="video/mp4"/>
         </video>
 	<!-- <script src="index.js"></script> -->
